# infosec_mastodon

./: .gitignore  Dockerfile  README.md  curated_infosec.csv  infosec_mastodon.py  mastodon_infosec_import.csv  openscience.csv  pyproject.toml
files/: crontab  update_infosec_csv.sh
